@@ -16,6 +16,19 @@
  */
 package org.operaton.bpm.engine.impl.bpmn.parser;
 
+import java.io.InputStream;
+import java.net.URL;
+import java.text.CharacterIterator;
+import java.text.StringCharacterIterator;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 import org.operaton.bpm.engine.ActivityTypes;
 import org.operaton.bpm.engine.BpmnParseException;
 import org.operaton.bpm.engine.ProcessEngineException;
@@ -25,7 +38,47 @@ import org.operaton.bpm.engine.delegate.VariableListener;
 import org.operaton.bpm.engine.impl.Condition;
 import org.operaton.bpm.engine.impl.HistoryTimeToLiveParser;
 import org.operaton.bpm.engine.impl.ProcessEngineLogger;
-import org.operaton.bpm.engine.impl.bpmn.behavior.*;
+import org.operaton.bpm.engine.impl.bpmn.behavior.BoundaryConditionalEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.BoundaryEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CallActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CallableElementActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CancelBoundaryEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CancelEndEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CaseCallActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ClassDelegateActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.CompensationEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.DmnBusinessRuleTaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ErrorEndEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.EventBasedGatewayActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.EventSubProcessActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.EventSubProcessStartConditionalEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.EventSubProcessStartEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ExclusiveGatewayActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ExternalTaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.InclusiveGatewayActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.IntermediateCatchEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.IntermediateCatchLinkEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.IntermediateConditionalEventBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.IntermediateThrowNoneEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.MailActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ManualTaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.MultiInstanceActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.NoneEndEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.NoneStartEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ParallelGatewayActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ParallelMultiInstanceActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ReceiveTaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ScriptTaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.SequentialMultiInstanceActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ServiceTaskDelegateExpressionActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ServiceTaskExpressionActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ShellActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.SubProcessActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.TaskActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.TerminateEndEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ThrowEscalationEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.ThrowSignalEventActivityBehavior;
+import org.operaton.bpm.engine.impl.bpmn.behavior.UserTaskActivityBehavior;
 import org.operaton.bpm.engine.impl.bpmn.helper.BpmnProperties;
 import org.operaton.bpm.engine.impl.bpmn.listener.ClassDelegateExecutionListener;
 import org.operaton.bpm.engine.impl.bpmn.listener.DelegateExpressionExecutionListener;
@@ -42,16 +95,45 @@ import org.operaton.bpm.engine.impl.core.variable.mapping.value.ConstantValuePro
 import org.operaton.bpm.engine.impl.core.variable.mapping.value.NullValueProvider;
 import org.operaton.bpm.engine.impl.core.variable.mapping.value.ParameterValueProvider;
 import org.operaton.bpm.engine.impl.dmn.result.DecisionResultMapper;
-import org.operaton.bpm.engine.impl.el.*;
+import org.operaton.bpm.engine.impl.el.ElValueProvider;
+import org.operaton.bpm.engine.impl.el.Expression;
+import org.operaton.bpm.engine.impl.el.ExpressionManager;
+import org.operaton.bpm.engine.impl.el.FixedValue;
+import org.operaton.bpm.engine.impl.el.UelExpressionCondition;
 import org.operaton.bpm.engine.impl.event.EventType;
 import org.operaton.bpm.engine.impl.form.FormDefinition;
-import org.operaton.bpm.engine.impl.form.handler.*;
-import org.operaton.bpm.engine.impl.jobexecutor.*;
+import org.operaton.bpm.engine.impl.form.handler.DefaultStartFormHandler;
+import org.operaton.bpm.engine.impl.form.handler.DefaultTaskFormHandler;
+import org.operaton.bpm.engine.impl.form.handler.DelegateStartFormHandler;
+import org.operaton.bpm.engine.impl.form.handler.DelegateTaskFormHandler;
+import org.operaton.bpm.engine.impl.form.handler.StartFormHandler;
+import org.operaton.bpm.engine.impl.form.handler.TaskFormHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.AsyncAfterMessageJobDeclaration;
+import org.operaton.bpm.engine.impl.jobexecutor.AsyncBeforeMessageJobDeclaration;
+import org.operaton.bpm.engine.impl.jobexecutor.EventSubscriptionJobDeclaration;
+import org.operaton.bpm.engine.impl.jobexecutor.JobDeclaration;
+import org.operaton.bpm.engine.impl.jobexecutor.MessageJobDeclaration;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerCatchIntermediateEventJobHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerDeclarationImpl;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerDeclarationType;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerEventJobHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerExecuteNestedActivityJobHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerStartEventJobHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerStartEventSubprocessJobHandler;
+import org.operaton.bpm.engine.impl.jobexecutor.TimerTaskListenerJobHandler;
 import org.operaton.bpm.engine.impl.persistence.entity.DeploymentEntity;
 import org.operaton.bpm.engine.impl.persistence.entity.ProcessDefinitionEntity;
 import org.operaton.bpm.engine.impl.pvm.PvmTransition;
 import org.operaton.bpm.engine.impl.pvm.delegate.ActivityBehavior;
-import org.operaton.bpm.engine.impl.pvm.process.*;
+import org.operaton.bpm.engine.impl.pvm.process.ActivityImpl;
+import org.operaton.bpm.engine.impl.pvm.process.ActivityStartBehavior;
+import org.operaton.bpm.engine.impl.pvm.process.HasDIBounds;
+import org.operaton.bpm.engine.impl.pvm.process.Lane;
+import org.operaton.bpm.engine.impl.pvm.process.LaneSet;
+import org.operaton.bpm.engine.impl.pvm.process.ParticipantProcess;
+import org.operaton.bpm.engine.impl.pvm.process.ProcessDefinitionImpl;
+import org.operaton.bpm.engine.impl.pvm.process.ScopeImpl;
+import org.operaton.bpm.engine.impl.pvm.process.TransitionImpl;
 import org.operaton.bpm.engine.impl.pvm.runtime.LegacyBehavior;
 import org.operaton.bpm.engine.impl.scripting.ExecutableScript;
 import org.operaton.bpm.engine.impl.scripting.ScriptCondition;
@@ -71,6 +153,7 @@ import org.operaton.bpm.engine.impl.util.xml.Namespace;
 import org.operaton.bpm.engine.impl.util.xml.Parse;
 import org.operaton.bpm.engine.impl.variable.VariableDeclaration;
 import org.operaton.bpm.engine.repository.ProcessDefinition;
+
 import static org.operaton.bpm.engine.impl.bpmn.parser.BpmnParseUtil.findOperatonExtensionElement;
 import static org.operaton.bpm.engine.impl.bpmn.parser.BpmnParseUtil.parseInputOutput;
 import static org.operaton.bpm.engine.impl.bpmn.parser.BpmnParseUtil.parseOperatonExtensionProperties;
@@ -79,12 +162,6 @@ import static org.operaton.bpm.engine.impl.form.handler.DefaultFormHandler.ALLOW
 import static org.operaton.bpm.engine.impl.form.handler.DefaultFormHandler.FORM_REF_BINDING_VERSION;
 import static org.operaton.bpm.engine.impl.persistence.entity.AcquirableJobEntity.DEFAULT_EXCLUSIVE;
 import static org.operaton.bpm.engine.impl.util.ClassDelegateUtil.instantiateDelegate;
-
-import java.io.InputStream;
-import java.net.URL;
-import java.text.CharacterIterator;
-import java.text.StringCharacterIterator;
-import java.util.*;
 
 /**
  * Specific parsing of one BPMN 2.0 XML file, created by the {@link BpmnParser}.
@@ -137,9 +214,11 @@ public class BpmnParse extends Parse {
   public static final String PROPERTYNAME_VARIABLE_MAPPING_DELEGATE_EXPRESSION = "variableMappingDelegateExpression";
   public static final String PROPERTYNAME_RESOURCE = "resource";
   public static final String PROPERTYNAME_LANGUAGE = "language";
+  public static final String PROPERTYNAME_DEFAULT = "default";
   public static final String TYPE = "type";
 
   public static final String TRUE = "true";
+  public static final String FALSE = "false";
   public static final String INTERRUPTING = "isInterrupting";
 
   public static final String CONDITIONAL_EVENT_DEFINITION = "conditionalEventDefinition";
@@ -150,6 +229,7 @@ public class BpmnParse extends Parse {
   public static final String MESSAGE_EVENT_DEFINITION = "messageEventDefinition";
   public static final String ERROR_EVENT_DEFINITION = "errorEventDefinition";
   public static final String CANCEL_EVENT_DEFINITION = "cancelEventDefinition";
+  public static final String TERMINATE_EVENT_DEFINITION = "terminateEventDefinition";
   public static final String LINK_EVENT_DEFINITION = "linkEventDefinition";
   public static final String CONDITION_EXPRESSION = "conditionExpression";
   public static final String CONDITION = "condition";
@@ -188,6 +268,20 @@ public class BpmnParse extends Parse {
   public static final Namespace BPMN_DC_NS = new Namespace(BpmnParser.BPMN_DC_NS);
   public static final String ALL = "all";
 
+  private static final String PROCESS_TAG = "process";
+  private static final String SUB_PROCESS_TAG = "subProcess";
+  private static final String EXTENSION_ELEMENTS_TAG = "extensionElements";
+  private static final String TRANSACTION_TAG = "transaction";
+  private static final String SCRIPT_TAG = "script";
+  private static final String TIME_CYCLE = "timeCycle";
+
+  private static final String SOURCE_REF_ATTRIBUTE = "sourceRef";
+  private static final String TARGET_REF_ATTRIBUTE = "targetRef";
+  private static final String ERROR_REF_ATTRIBUTE = "errorRef";
+  private static final String DEFAULT_ATTRIBUTE = "default";
+  private static final String BPMN_ELEMENT_ATTRIBUTE = "bpmnElement";
+
+
   /** The deployment to which the parsed process definitions will be added. */
   protected DeploymentEntity deployment;
 
@@ -195,7 +289,7 @@ public class BpmnParse extends Parse {
   protected List<ProcessDefinitionEntity> processDefinitions = new ArrayList<>();
 
   /** Mapping of found errors in BPMN 2.0 file */
-  protected Map<String, Error> errors = new HashMap<>();
+  protected Map<String, Error> bpmnParseErrors = new HashMap<>();
 
   /** Mapping of found escalation elements */
   protected Map<String, Escalation> escalations = new HashMap<>();
@@ -361,7 +455,7 @@ public class BpmnParse extends Parse {
         Class<?> wsdlImporterClass;
         try {
           wsdlImporterClass = Class.forName("org.operaton.bpm.engine.impl.webservice.CxfWSDLImporter", true, Thread.currentThread().getContextClassLoader());
-          XMLImporter newInstance = (XMLImporter) wsdlImporterClass.newInstance();
+          XMLImporter newInstance = (XMLImporter) wsdlImporterClass.getDeclaredConstructor().newInstance();
           this.importers.put(importType, newInstance);
           return newInstance;
         } catch (Exception e) {
@@ -443,7 +537,7 @@ public class BpmnParse extends Parse {
         error.setErrorMessageExpression(createParameterValueProvider(errorMessage, expressionManager));
       }
 
-      errors.put(id, error);
+      bpmnParseErrors.put(id, error);
     }
   }
 
@@ -482,7 +576,7 @@ public class BpmnParse extends Parse {
    * element.
    */
   public void parseProcessDefinitions() {
-    for (Element processElement : rootElement.elements("process")) {
+    for (Element processElement : rootElement.elements(PROCESS_TAG)) {
       boolean isExecutable = !deployment.isNew();
       String isExecutableStr = processElement.attribute("isExecutable");
       if (isExecutableStr != null) {
@@ -564,7 +658,7 @@ public class BpmnParse extends Parse {
     boolean isStartableInTasklist = isStartable(processElement);
     processDefinition.setStartableInTasklist(isStartableInTasklist);
 
-    LOG.parsingElement("process", processDefinition.getKey());
+    LOG.parsingElement(PROCESS_TAG, processDefinition.getKey());
 
     parseScope(processElement, processDefinition);
 
@@ -720,7 +814,7 @@ public class BpmnParse extends Parse {
     ProcessDefinitionEntity processDefinition = (ProcessDefinitionEntity) definition;
 
     // parse activiti:potentialStarters
-    Element extentionsElement = scopeElement.element("extensionElements");
+    Element extentionsElement = scopeElement.element(EXTENSION_ELEMENTS_TAG);
     if (extentionsElement != null) {
       List<Element> potentialStarterElements = extentionsElement.elementsNS(OPERATON_BPMN_EXTENSIONS_NS, POTENTIAL_STARTER);
 
@@ -773,11 +867,11 @@ public class BpmnParse extends Parse {
 
   protected void parseAssociations(Element scopeElement, ScopeImpl parentScope, Map<String, Element> compensationHandlers) {
     for (Element associationElement : scopeElement.elements("association")) {
-      String sourceRef = associationElement.attribute("sourceRef");
+      String sourceRef = associationElement.attribute(SOURCE_REF_ATTRIBUTE);
       if (sourceRef == null) {
         addError("association element missing attribute 'sourceRef'", associationElement);
       }
-      String targetRef = associationElement.attribute("targetRef");
+      String targetRef = associationElement.attribute(TARGET_REF_ATTRIBUTE);
       if (targetRef == null) {
         addError("association element missing attribute 'targetRef'", associationElement);
       }
@@ -890,13 +984,13 @@ public class BpmnParse extends Parse {
         parseExecutionListenersOnScope(startEventElement, startEventActivity);
       }
     } else {
-      if (Arrays.asList("process", "subProcess").contains(parentElement.getTagName())) {
+      if (Arrays.asList(PROCESS_TAG, SUB_PROCESS_TAG).contains(parentElement.getTagName())) {
         addError(parentElement.getTagName() + " must define a startEvent element", parentElement);
       }
     }
-    if (scope instanceof ProcessDefinitionEntity processDefinitonEntity) {
-      selectInitial(startEventActivities, processDefinitonEntity, parentElement);
-      parseStartFormHandlers(startEventElements, processDefinitonEntity);
+    if (scope instanceof ProcessDefinitionEntity processDefinitionEntity) {
+      selectInitial(startEventActivities, processDefinitionEntity, parentElement);
+      parseStartFormHandlers(startEventElements, processDefinitionEntity);
     }
 
     // invoke parse listeners
@@ -1133,14 +1227,14 @@ public class BpmnParse extends Parse {
 
   protected void parseErrorStartEventDefinition(Element errorEventDefinition, ActivityImpl startEventActivity) {
     startEventActivity.getProperties().set(BpmnProperties.TYPE, ActivityTypes.START_EVENT_ERROR);
-    String errorRef = errorEventDefinition.attribute("errorRef");
+    String errorRef = errorEventDefinition.attribute(ERROR_REF_ATTRIBUTE);
     Error error = null;
     // the error event definition executes the event subprocess activity which
     // hosts the start event
     String eventSubProcessActivity = startEventActivity.getFlowScope().getId();
     ErrorEventDefinition definition = new ErrorEventDefinition(eventSubProcessActivity);
     if (errorRef != null) {
-      error = errors.get(errorRef);
+      error = bpmnParseErrors.get(errorRef);
       String errorCode = error == null ? errorRef : error.getErrorCode();
       definition.setErrorCode(errorCode);
     }
@@ -1396,8 +1490,8 @@ public class BpmnParse extends Parse {
             + "'). This is not allowed to have a condition.", null, activity.getId(), flow.getId());
       }
     } else {
-      String defaultSequenceFlow = (String) activity.getProperty("default");
-      boolean hasDefaultFlow = defaultSequenceFlow != null && defaultSequenceFlow.length() > 0;
+      String defaultSequenceFlow = (String) activity.getProperty(PROPERTYNAME_DEFAULT);
+      boolean hasDefaultFlow = defaultSequenceFlow != null && !defaultSequenceFlow.isEmpty();
 
       ArrayList<PvmTransition> flowsWithoutCondition = new ArrayList<>();
       for (PvmTransition flow : activity.getOutgoingTransitions()) {
@@ -1623,25 +1717,18 @@ public class BpmnParse extends Parse {
     final String activityRef = compensateEventDefinitionElement.attribute("activityRef");
     boolean waitForCompletion = TRUE.equals(compensateEventDefinitionElement.attribute("waitForCompletion", TRUE));
 
-    if (activityRef != null) {
+    if (activityRef != null && scopeElement.findActivityAtLevelOfSubprocess(activityRef) == null) {
+      Boolean isTriggeredByEvent = scopeElement.getProperties().get(BpmnProperties.TRIGGERED_BY_EVENT);
+      String type = (String) scopeElement.getProperty(PROPERTYNAME_TYPE);
+      if (Boolean.TRUE == isTriggeredByEvent && SUB_PROCESS_TAG.equals(type)) {
+        scopeElement = scopeElement.getFlowScope();
+      }
       if (scopeElement.findActivityAtLevelOfSubprocess(activityRef) == null) {
-        Boolean isTriggeredByEvent = scopeElement.getProperties().get(BpmnProperties.TRIGGERED_BY_EVENT);
-        String type = (String) scopeElement.getProperty(PROPERTYNAME_TYPE);
-        if (Boolean.TRUE == isTriggeredByEvent && "subProcess".equals(type)) {
-          scopeElement = scopeElement.getFlowScope();
-        }
-        if (scopeElement.findActivityAtLevelOfSubprocess(activityRef) == null) {
-          final String scopeId = scopeElement.getId();
-          scopeElement.addToBacklog(activityRef, new ScopeImpl.BacklogErrorCallback() {
-
-            @Override
-            public void callback() {
-              addError("Invalid attribute value for 'activityRef': no activity with id '" + activityRef + "' in scope '" + scopeId + "'",
-              compensateEventDefinitionElement,
-              parentElementId);
-            }
-          });
-        }
+        final String scopeId = scopeElement.getId();
+        scopeElement.addToBacklog(activityRef, () ->
+            addError("Invalid attribute value for 'activityRef': no activity with id '" + activityRef + "' in scope '" + scopeId + "'",
+                compensateEventDefinitionElement,
+                parentElementId));
       }
     }
 
@@ -1690,11 +1777,11 @@ public class BpmnParse extends Parse {
     LegacyBehavior.parseCancelBoundaryEvent(activity);
 
     ActivityImpl transaction = (ActivityImpl) activity.getEventScope();
-    if (transaction.getActivityBehavior() != null && transaction.getActivityBehavior() instanceof MultiInstanceActivityBehavior) {
+    if (transaction.getActivityBehavior() instanceof MultiInstanceActivityBehavior) {
       transaction = transaction.getActivities().get(0);
     }
 
-    if (!"transaction".equals(transaction.getProperty(BpmnProperties.TYPE.getName()))) {
+    if (!TRANSACTION_TAG.equals(transaction.getProperty(BpmnProperties.TYPE.getName()))) {
       addError("boundary event with cancelEventDefinition only supported on transaction subprocesses", cancelEventDefinition, activity.getId());
     }
 
@@ -1725,96 +1812,96 @@ public class BpmnParse extends Parse {
     Element miLoopCharacteristics = activityElement.element("multiInstanceLoopCharacteristics");
     if (miLoopCharacteristics == null) {
       return null;
-    } else {
-      String id = activityElement.attribute("id");
-
-      LOG.parsingElement("mi body for activity", id);
-
-      id = getIdForMiBody(id);
-      ActivityImpl miBodyScope = scope.createActivity(id);
-      setActivityAsyncDelegates(miBodyScope);
-      miBodyScope.setProperty(PROPERTYNAME_TYPE, ActivityTypes.MULTI_INSTANCE_BODY);
-      miBodyScope.setScope(true);
-
-      boolean isSequential = parseBooleanAttribute(miLoopCharacteristics.attribute("isSequential"), false);
-
-      MultiInstanceActivityBehavior behavior = null;
-      if (isSequential) {
-        behavior = new SequentialMultiInstanceActivityBehavior();
-      } else {
-        behavior = new ParallelMultiInstanceActivityBehavior();
-      }
-      miBodyScope.setActivityBehavior(behavior);
-
-      // loopCardinality
-      Element loopCardinality = miLoopCharacteristics.element("loopCardinality");
-      if (loopCardinality != null) {
-        String loopCardinalityText = loopCardinality.getText();
-        if (loopCardinalityText == null || "".equals(loopCardinalityText)) {
-          addError("loopCardinality must be defined for a multiInstanceLoopCharacteristics definition ", miLoopCharacteristics, id);
-        }
-        behavior.setLoopCardinalityExpression(expressionManager.createExpression(loopCardinalityText));
-      }
-
-      // completionCondition
-      Element completionCondition = miLoopCharacteristics.element("completionCondition");
-      if (completionCondition != null) {
-        String completionConditionText = completionCondition.getText();
-        behavior.setCompletionConditionExpression(expressionManager.createExpression(completionConditionText));
-      }
-
-      // activiti:collection
-      String collection = miLoopCharacteristics.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "collection");
-      if (collection != null) {
-        if (collection.contains("{")) {
-          behavior.setCollectionExpression(expressionManager.createExpression(collection));
-        } else {
-          behavior.setCollectionVariable(collection);
-        }
-      }
-
-      // loopDataInputRef
-      Element loopDataInputRef = miLoopCharacteristics.element("loopDataInputRef");
-      if (loopDataInputRef != null) {
-        String loopDataInputRefText = loopDataInputRef.getText();
-        if (loopDataInputRefText != null) {
-          if (loopDataInputRefText.contains("{")) {
-            behavior.setCollectionExpression(expressionManager.createExpression(loopDataInputRefText));
-          } else {
-            behavior.setCollectionVariable(loopDataInputRefText);
-          }
-        }
-      }
-
-      // activiti:elementVariable
-      String elementVariable = miLoopCharacteristics.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "elementVariable");
-      if (elementVariable != null) {
-        behavior.setCollectionElementVariable(elementVariable);
-      }
-
-      // dataInputItem
-      Element inputDataItem = miLoopCharacteristics.element("inputDataItem");
-      if (inputDataItem != null) {
-        String inputDataItemName = inputDataItem.attribute("name");
-        behavior.setCollectionElementVariable(inputDataItemName);
-      }
-
-      // Validation
-      if (behavior.getLoopCardinalityExpression() == null && behavior.getCollectionExpression() == null && behavior.getCollectionVariable() == null) {
-        addError("Either loopCardinality or loopDataInputRef/activiti:collection must be set", miLoopCharacteristics, id);
-      }
-
-      // Validation
-      if (behavior.getCollectionExpression() == null && behavior.getCollectionVariable() == null && behavior.getCollectionElementVariable() != null) {
-        addError("LoopDataInputRef/activiti:collection must be set when using inputDataItem or activiti:elementVariable", miLoopCharacteristics, id);
-      }
-
-      for (BpmnParseListener parseListener : parseListeners) {
-        parseListener.parseMultiInstanceLoopCharacteristics(activityElement, miLoopCharacteristics, miBodyScope);
-      }
-
-      return miBodyScope;
     }
+    String id = activityElement.attribute("id");
+
+    LOG.parsingElement("mi body for activity", id);
+
+    id = getIdForMiBody(id);
+    ActivityImpl miBodyScope = scope.createActivity(id);
+    setActivityAsyncDelegates(miBodyScope);
+    miBodyScope.setProperty(PROPERTYNAME_TYPE, ActivityTypes.MULTI_INSTANCE_BODY);
+    miBodyScope.setScope(true);
+
+    boolean isSequential = parseBooleanAttribute(miLoopCharacteristics.attribute("isSequential"), false);
+
+    MultiInstanceActivityBehavior behavior = null;
+    if (isSequential) {
+      behavior = new SequentialMultiInstanceActivityBehavior();
+    } else {
+      behavior = new ParallelMultiInstanceActivityBehavior();
+    }
+    miBodyScope.setActivityBehavior(behavior);
+
+    // loopCardinality
+    Element loopCardinality = miLoopCharacteristics.element("loopCardinality");
+    if (loopCardinality != null) {
+      String loopCardinalityText = loopCardinality.getText();
+      if (loopCardinalityText == null || "".equals(loopCardinalityText)) {
+        addError("loopCardinality must be defined for a multiInstanceLoopCharacteristics definition ", miLoopCharacteristics, id);
+      }
+      behavior.setLoopCardinalityExpression(expressionManager.createExpression(loopCardinalityText));
+    }
+
+    // completionCondition
+    Element completionCondition = miLoopCharacteristics.element("completionCondition");
+    if (completionCondition != null) {
+      String completionConditionText = completionCondition.getText();
+      behavior.setCompletionConditionExpression(expressionManager.createExpression(completionConditionText));
+    }
+
+    // activiti:collection
+    String collection = miLoopCharacteristics.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "collection");
+    if (collection != null) {
+      if (collection.contains("{")) {
+        behavior.setCollectionExpression(expressionManager.createExpression(collection));
+      } else {
+        behavior.setCollectionVariable(collection);
+      }
+    }
+
+    // loopDataInputRef
+    Element loopDataInputRef = miLoopCharacteristics.element("loopDataInputRef");
+    if (loopDataInputRef != null) {
+      String loopDataInputRefText = loopDataInputRef.getText();
+      if (loopDataInputRefText != null) {
+        if (loopDataInputRefText.contains("{")) {
+          behavior.setCollectionExpression(expressionManager.createExpression(loopDataInputRefText));
+        } else {
+          behavior.setCollectionVariable(loopDataInputRefText);
+        }
+      }
+    }
+
+    // activiti:elementVariable
+    String elementVariable = miLoopCharacteristics.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "elementVariable");
+    if (elementVariable != null) {
+      behavior.setCollectionElementVariable(elementVariable);
+    }
+
+    // dataInputItem
+    Element inputDataItem = miLoopCharacteristics.element("inputDataItem");
+    if (inputDataItem != null) {
+      String inputDataItemName = inputDataItem.attribute("name");
+      behavior.setCollectionElementVariable(inputDataItemName);
+    }
+
+    // Validation
+    if (behavior.getLoopCardinalityExpression() == null && behavior.getCollectionExpression() == null && behavior.getCollectionVariable() == null) {
+      addError("Either loopCardinality or loopDataInputRef/activiti:collection must be set", miLoopCharacteristics, id);
+    }
+
+    // Validation
+    if (behavior.getCollectionExpression() == null && behavior.getCollectionVariable() == null && behavior.getCollectionElementVariable() != null) {
+      addError("LoopDataInputRef/activiti:collection must be set when using inputDataItem or activiti:elementVariable", miLoopCharacteristics, id);
+    }
+
+    for (BpmnParseListener parseListener : parseListeners) {
+      parseListener.parseMultiInstanceLoopCharacteristics(activityElement, miLoopCharacteristics, miBodyScope);
+    }
+
+    return miBodyScope;
+
   }
 
   public static String getIdForMiBody(String id) {
@@ -1833,8 +1920,8 @@ public class BpmnParse extends Parse {
     ActivityImpl activity = scopeElement.createActivity(id);
 
     activity.setProperty("name", activityElement.attribute("name"));
-    activity.setProperty("documentation", parseDocumentation(activityElement));
-    activity.setProperty("default", activityElement.attribute("default"));
+    activity.setProperty(PROPERTYNAME_DOCUMENTATION, parseDocumentation(activityElement));
+    activity.setProperty(PROPERTYNAME_DEFAULT, activityElement.attribute(DEFAULT_ATTRIBUTE));
     activity.getProperties().set(BpmnProperties.TYPE, activityElement.getTagName());
     activity.setProperty("line", activityElement.getLine());
     setActivityAsyncDelegates(activity);
@@ -1854,25 +1941,19 @@ public class BpmnParse extends Parse {
    * @param activity the activity which gets the delegates
    */
   protected void setActivityAsyncDelegates(final ActivityImpl activity) {
-    activity.setDelegateAsyncAfterUpdate(new ActivityImpl.AsyncAfterUpdate() {
-      @Override
-      public void updateAsyncAfter(boolean asyncAfter, boolean exclusive) {
-        if (asyncAfter) {
-          addMessageJobDeclaration(new AsyncAfterMessageJobDeclaration(), activity, exclusive);
-        } else {
-          removeMessageJobDeclarationWithJobConfiguration(activity, MessageJobDeclaration.ASYNC_AFTER);
-        }
+    activity.setDelegateAsyncAfterUpdate((asyncAfter, exclusive) -> {
+      if (asyncAfter) {
+        addMessageJobDeclaration(new AsyncAfterMessageJobDeclaration(), activity, exclusive);
+      } else {
+        removeMessageJobDeclarationWithJobConfiguration(activity, MessageJobDeclaration.ASYNC_AFTER);
       }
     });
 
-    activity.setDelegateAsyncBeforeUpdate(new ActivityImpl.AsyncBeforeUpdate() {
-      @Override
-      public void updateAsyncBefore(boolean asyncBefore, boolean exclusive) {
-        if (asyncBefore) {
-          addMessageJobDeclaration(new AsyncBeforeMessageJobDeclaration(), activity, exclusive);
-        } else {
-          removeMessageJobDeclarationWithJobConfiguration(activity, MessageJobDeclaration.ASYNC_BEFORE);
-        }
+    activity.setDelegateAsyncBeforeUpdate((asyncBefore, exclusive) -> {
+      if (asyncBefore) {
+        addMessageJobDeclaration(new AsyncBeforeMessageJobDeclaration(), activity, exclusive);
+      } else {
+        removeMessageJobDeclarationWithJobConfiguration(activity, MessageJobDeclaration.ASYNC_BEFORE);
       }
     });
   }
@@ -2048,8 +2129,8 @@ public class BpmnParse extends Parse {
 
     for (Element sequenceFlow : seqFlows) {
 
-      String sourceRef = sequenceFlow.attribute("sourceRef");
-      String targetRef = sequenceFlow.attribute("targetRef");
+      String sourceRef = sequenceFlow.attribute(SOURCE_REF_ATTRIBUTE);
+      String targetRef = sequenceFlow.attribute(TARGET_REF_ATTRIBUTE);
 
       if (activity.getId().equals(sourceRef)) {
         Element sibling = siblingsMap.get(targetRef);
@@ -2129,7 +2210,7 @@ public class BpmnParse extends Parse {
 
     // determine script source
     String scriptSource = null;
-    Element scriptElement = scriptTaskElement.element("script");
+    Element scriptElement = scriptTaskElement.element(SCRIPT_TAG);
     if (scriptElement != null) {
       scriptSource = scriptElement.getText();
     }
@@ -2210,7 +2291,7 @@ public class BpmnParse extends Parse {
       } else {
         addError("Invalid usage of type attribute on " + elementName + ": '" + type + "'", serviceTaskElement);
       }
-    } else if (className != null && className.trim().length() > 0) {
+    } else if (className != null && !className.trim().isEmpty()) {
       if (resultVariableName != null) {
         addError("'resultVariableName' not supported for " + elementName + " elements using 'class'", serviceTaskElement);
       }
@@ -2223,7 +2304,7 @@ public class BpmnParse extends Parse {
       activity.setActivityBehavior(new ServiceTaskDelegateExpressionActivityBehavior(expressionManager.createExpression(delegateExpression),
           parseFieldDeclarations(serviceTaskElement)));
 
-    } else if (expression != null && expression.trim().length() > 0) {
+    } else if (expression != null && !expression.trim().isEmpty()) {
       activity.setActivityBehavior(new ServiceTaskExpressionActivityBehavior(expressionManager.createExpression(expression), resultVariableName));
 
     }
@@ -2416,13 +2497,9 @@ public class BpmnParse extends Parse {
   protected void addJobDeclarationToProcessDefinition(JobDeclaration<?, ?> jobDeclaration, ProcessDefinition processDefinition) {
     String key = processDefinition.getKey();
 
-    List<JobDeclaration<?, ?>> containingJobDeclarations = jobDeclarations.get(key);
-    if (containingJobDeclarations == null) {
-      containingJobDeclarations = new ArrayList<>();
-      jobDeclarations.put(key, containingJobDeclarations);
-    }
-
-    containingJobDeclarations.add(jobDeclaration);
+    jobDeclarations
+      .computeIfAbsent(key, k -> new ArrayList<>())
+      .add(jobDeclaration);
   }
 
   /**
@@ -2523,9 +2600,9 @@ public class BpmnParse extends Parse {
 
       shellCommandDefined |= fieldName.equals("command");
 
-      if ((fieldName.equals("wait") || fieldName.equals("redirectError") || fieldName.equals("cleanEnv")) && !fieldValue.toLowerCase().equals(TRUE)
-          && !fieldValue.toLowerCase().equals("false")) {
-        addError("undefined value for shell " + fieldName + " parameter :" + fieldValue.toString(), serviceTaskElement);
+      if ((fieldName.equals("wait") || fieldName.equals("redirectError") || fieldName.equals("cleanEnv")) && !fieldValue.equalsIgnoreCase(TRUE)
+          && !fieldValue.equalsIgnoreCase(FALSE)) {
+        addError("undefined value for shell " + fieldName + " parameter :" + fieldValue, serviceTaskElement);
       }
 
     }
@@ -2538,7 +2615,7 @@ public class BpmnParse extends Parse {
   public List<FieldDeclaration> parseFieldDeclarations(Element element) {
     List<FieldDeclaration> fieldDeclarations = new ArrayList<>();
 
-    Element elementWithFieldInjections = element.element("extensionElements");
+    Element elementWithFieldInjections = element.element(EXTENSION_ELEMENTS_TAG);
     if (elementWithFieldInjections == null) { // Custom extensions will just
                                               // have the <field.. as a
                                               // subelement
@@ -2593,7 +2670,7 @@ public class BpmnParse extends Parse {
   protected FieldDeclaration parseExpressionFieldDeclaration(Element fieldDeclarationElement, Element serviceTaskElement, String fieldName) {
     try {
       String expression = getStringValueFromAttributeOrElement(PROPERTYNAME_EXPRESSION, PROPERTYNAME_EXPRESSION, fieldDeclarationElement, serviceTaskElement.attribute("id"));
-      if (expression != null && expression.trim().length() > 0) {
+      if (expression != null && !expression.trim().isEmpty()) {
         return new FieldDeclaration(fieldName, Expression.class.getName(), expressionManager.createExpression(expression));
       }
     } catch (ProcessEngineException ae) {
@@ -2617,13 +2694,13 @@ public class BpmnParse extends Parse {
       addError("Can't use attribute '" + attributeName + "' and element '" + elementName + "' together, only use one", element, ancestorElementId);
     } else if (childElement != null) {
       stringElementText = childElement.getText();
-      if (stringElementText == null || stringElementText.length() == 0) {
+      if (stringElementText == null || stringElementText.isEmpty()) {
         addError("No valid value found in attribute '" + attributeName + "' nor element '" + elementName + "'", element, ancestorElementId);
       } else {
         // Use text of element
         value = stringElementText;
       }
-    } else if (attributeValue != null && attributeValue.length() > 0) {
+    } else if (attributeValue != null && !attributeValue.isEmpty()) {
       // Using attribute
       value = attributeValue;
     }
@@ -2934,30 +3011,30 @@ public class BpmnParse extends Parse {
     if (s != null && !"".equals(s)) {
 
       StringCharacterIterator iterator = new StringCharacterIterator(s);
-      char c = iterator.first();
+      char character = iterator.first();
 
-      StringBuilder strb = new StringBuilder();
+      StringBuilder stringBuilder = new StringBuilder();
       boolean insideExpression = false;
 
-      while (c != CharacterIterator.DONE) {
-        if (c == '{' || c == '$') {
+      while (character != CharacterIterator.DONE) {
+        if (character == '{' || character == '$') {
           insideExpression = true;
-        } else if (c == '}') {
+        } else if (character == '}') {
           insideExpression = false;
-        } else if (c == ',' && !insideExpression) {
-          result.add(strb.toString().trim());
-          strb.delete(0, strb.length());
+        } else if (character == ',' && !insideExpression) {
+          result.add(stringBuilder.toString().trim());
+          stringBuilder.delete(0, stringBuilder.length());
         }
 
-        if (c != ',' || (insideExpression)) {
-          strb.append(c);
+        if (character != ',' || (insideExpression)) {
+          stringBuilder.append(character);
         }
 
-        c = iterator.next();
+        character = iterator.next();
       }
 
-      if (strb.length() > 0) {
-        result.add(strb.toString().trim());
+      if (stringBuilder.length() > 0) {
+        result.add(stringBuilder.toString().trim());
       }
 
     }
@@ -2965,7 +3042,7 @@ public class BpmnParse extends Parse {
   }
 
   protected void parseTaskListeners(Element userTaskElement, ActivityImpl activity, TaskDefinition taskDefinition) {
-    Element extentionsElement = userTaskElement.element("extensionElements");
+    Element extentionsElement = userTaskElement.element(EXTENSION_ELEMENTS_TAG);
     if (extentionsElement != null) {
       List<Element> taskListenerElements = extentionsElement.elementsNS(OPERATON_BPMN_EXTENSIONS_NS, "taskListener");
       for (Element taskListenerElement : taskListenerElements) {
@@ -2995,7 +3072,7 @@ public class BpmnParse extends Parse {
     String className = taskListenerElement.attribute(PROPERTYNAME_CLASS);
     String expression = taskListenerElement.attribute(PROPERTYNAME_EXPRESSION);
     String delegateExpression = taskListenerElement.attribute(PROPERTYNAME_DELEGATE_EXPRESSION);
-    Element scriptElement = taskListenerElement.elementNS(OPERATON_BPMN_EXTENSIONS_NS, "script");
+    Element scriptElement = taskListenerElement.elementNS(OPERATON_BPMN_EXTENSIONS_NS, SCRIPT_TAG);
 
     if (className != null) {
       taskListener = new ClassDelegateTaskListener(className, parseFieldDeclarations(taskListenerElement));
@@ -3054,7 +3131,7 @@ public class BpmnParse extends Parse {
 
       Element errorEventDefinition = endEventElement.element(ERROR_EVENT_DEFINITION);
       Element cancelEventDefinition = endEventElement.element(CANCEL_EVENT_DEFINITION);
-      Element terminateEventDefinition = endEventElement.element("terminateEventDefinition");
+      Element terminateEventDefinition = endEventElement.element(TERMINATE_EVENT_DEFINITION);
       Element messageEventDefinitionElement = endEventElement.element(MESSAGE_EVENT_DEFINITION);
       Element signalEventDefinition = endEventElement.element(SIGNAL_EVENT_DEFINITION);
       Element compensateEventDefinitionElement = endEventElement.element(COMPENSATE_EVENT_DEFINITION);
@@ -3064,12 +3141,12 @@ public class BpmnParse extends Parse {
 
       String activityId = activity.getId();
       if (errorEventDefinition != null) { // error end event
-        String errorRef = errorEventDefinition.attribute("errorRef");
+        String errorRef = errorEventDefinition.attribute(ERROR_REF_ATTRIBUTE);
 
         if (errorRef == null || "".equals(errorRef)) {
           addError("'errorRef' attribute is mandatory on error end event", errorEventDefinition, activityId);
         } else {
-          Error error = errors.get(errorRef);
+          Error error = bpmnParseErrors.get(errorRef);
           if (error != null && (error.getErrorCode() == null || "".equals(error.getErrorCode()))) {
             addError(
                 "'errorCode' is mandatory on errors referenced by throwing error event definitions, but the error '" + error.getId() + "' does not define one.",
@@ -3084,7 +3161,7 @@ public class BpmnParse extends Parse {
           }
         }
       } else if (cancelEventDefinition != null) {
-        if (scope.getProperty(BpmnProperties.TYPE.getName()) == null || !scope.getProperty(BpmnProperties.TYPE.getName()).equals("transaction")) {
+        if (scope.getProperty(BpmnProperties.TYPE.getName()) == null || !scope.getProperty(BpmnProperties.TYPE.getName()).equals(TRANSACTION_TAG)) {
           addError("end event with cancelEventDefinition only supported inside transaction subprocess", cancelEventDefinition, activityId);
         } else {
           activity.getProperties().set(BpmnProperties.TYPE, ActivityTypes.END_EVENT_CANCEL);
@@ -3139,9 +3216,7 @@ public class BpmnParse extends Parse {
         activity.setActivityBehavior(new NoneEndEventActivityBehavior());
       }
 
-      if (activity != null) {
-        parseActivityInputOutput(endEventElement, activity);
-      }
+      parseActivityInputOutput(endEventElement, activity);
 
       parseAsynchronousContinuationForActivity(endEventElement, activity);
 
@@ -3290,15 +3365,15 @@ public class BpmnParse extends Parse {
 
   public List<OperatonErrorEventDefinition> parseOperatonErrorEventDefinitions(ActivityImpl activity, Element scopeElement) {
     List<OperatonErrorEventDefinition> errorEventDefinitions = new ArrayList<>();
-    Element extensionElements = scopeElement.element("extensionElements");
+    Element extensionElements = scopeElement.element(EXTENSION_ELEMENTS_TAG);
     if (extensionElements != null) {
-      List<Element> errorEventDefinitionElements = extensionElements.elements("errorEventDefinition");
+      List<Element> errorEventDefinitionElements = extensionElements.elements(ERROR_EVENT_DEFINITION);
       for (Element errorEventDefinitionElement : errorEventDefinitionElements) {
-        String errorRef = errorEventDefinitionElement.attribute("errorRef");
+        String errorRef = errorEventDefinitionElement.attribute(ERROR_REF_ATTRIBUTE);
         Error error = null;
         if (errorRef != null) {
           String operatonExpression = errorEventDefinitionElement.attribute("expression");
-          error = errors.get(errorRef);
+          error = bpmnParseErrors.get(errorRef);
           OperatonErrorEventDefinition definition = new OperatonErrorEventDefinition(activity.getId(), expressionManager.createExpression(operatonExpression));
           definition.setErrorCode(error == null ? errorRef : error.getErrorCode());
           setErrorCodeVariableOnErrorEventDefinition(errorEventDefinitionElement, definition);
@@ -3341,7 +3416,7 @@ public class BpmnParse extends Parse {
     if (interrupting) {
       timerDeclaration.setInterruptingTimer(true);
 
-      Element timeCycleElement = timerEventDefinition.element("timeCycle");
+      Element timeCycleElement = timerEventDefinition.element(TIME_CYCLE);
       if (timeCycleElement != null) {
         addTimeCycleWarning(timeCycleElement, "cancelling boundary", boundaryActivity.getId());
       }
@@ -3412,7 +3487,7 @@ public class BpmnParse extends Parse {
     timerDeclaration.setInterruptingTimer(interrupting);
 
     if (interrupting) {
-      Element timeCycleElement = timerEventDefinition.element("timeCycle");
+      Element timeCycleElement = timerEventDefinition.element(TIME_CYCLE);
       if (timeCycleElement != null) {
         addTimeCycleWarning(timeCycleElement, "interrupting start", timerActivity.getId());
       }
@@ -3464,33 +3539,35 @@ public class BpmnParse extends Parse {
     if (signalRef == null) {
       addError("signalEventDefinition does not have required property 'signalRef'", signalEventDefinitionElement, signalElementId);
       return null;
-    } else {
-      SignalDefinition signalDefinition = signals.get(resolveName(signalRef));
-      if (signalDefinition == null) {
-        addError("Could not find signal with id '" + signalRef + "'", signalEventDefinitionElement, signalElementId);
-      }
-
-      EventSubscriptionDeclaration signalEventDefinition;
-      if (isThrowing) {
-        CallableElement payload = new CallableElement();
-        parseInputParameter(signalEventDefinitionElement, payload);
-        signalEventDefinition = new EventSubscriptionDeclaration(signalDefinition.getExpression(), EventType.SIGNAL, payload);
-      } else {
-        signalEventDefinition = new EventSubscriptionDeclaration(signalDefinition.getExpression(), EventType.SIGNAL);
-      }
-
-      boolean throwingAsync = TRUE.equals(signalEventDefinitionElement.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "async", "false"));
-      signalEventDefinition.setAsync(throwingAsync);
-
-      return signalEventDefinition;
     }
+
+    SignalDefinition signalDefinition = signals.get(resolveName(signalRef));
+    if (signalDefinition == null) {
+      addError("Could not find signal with id '" + signalRef + "'", signalEventDefinitionElement, signalElementId);
+      return null;
+    }
+
+    EventSubscriptionDeclaration signalEventDefinition;
+    if (isThrowing) {
+      CallableElement payload = new CallableElement();
+      parseInputParameter(signalEventDefinitionElement, payload);
+      signalEventDefinition = new EventSubscriptionDeclaration(signalDefinition.getExpression(), EventType.SIGNAL, payload);
+    } else {
+      signalEventDefinition = new EventSubscriptionDeclaration(signalDefinition.getExpression(), EventType.SIGNAL);
+    }
+
+    boolean throwingAsync = TRUE.equals(signalEventDefinitionElement.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, "async", FALSE));
+    signalEventDefinition.setAsync(throwingAsync);
+
+    return signalEventDefinition;
+
   }
 
   protected void parseIntermediateTimerEventDefinition(Element timerEventDefinition, ActivityImpl timerActivity) {
     timerActivity.getProperties().set(BpmnProperties.TYPE, ActivityTypes.INTERMEDIATE_EVENT_TIMER);
     TimerDeclarationImpl timerDeclaration = parseTimer(timerEventDefinition, timerActivity, TimerCatchIntermediateEventJobHandler.TYPE);
 
-    Element timeCycleElement = timerEventDefinition.element("timeCycle");
+    Element timeCycleElement = timerEventDefinition.element(TIME_CYCLE);
     if (timeCycleElement != null) {
       ProcessDefinition processDefinition = (ProcessDefinition) timerActivity.getProcessDefinition();
       LOG.intermediateCatchTimerEventWithTimeCycleNotRecommended(processDefinition.getKey(), timerActivity.getId());
@@ -3510,7 +3587,7 @@ public class BpmnParse extends Parse {
     // TimeCycle
     if (expression == null) {
       type = TimerDeclarationType.CYCLE;
-      expression = parseExpression(timerEventDefinition, "timeCycle");
+      expression = parseExpression(timerEventDefinition, TIME_CYCLE);
     }
     // TimeDuration
     if (expression == null) {
@@ -3551,11 +3628,11 @@ public class BpmnParse extends Parse {
 
     boundaryEventActivity.getProperties().set(BpmnProperties.TYPE, ActivityTypes.BOUNDARY_ERROR);
 
-    String errorRef = errorEventDefinition.attribute("errorRef");
+    String errorRef = errorEventDefinition.attribute(ERROR_REF_ATTRIBUTE);
     Error error = null;
     ErrorEventDefinition definition = new ErrorEventDefinition(boundaryEventActivity.getId());
     if (errorRef != null) {
-      error = errors.get(errorRef);
+      error = bpmnParseErrors.get(errorRef);
       definition.setErrorCode(error == null ? errorRef : error.getErrorCode());
     }
     setErrorCodeVariableOnErrorEventDefinition(errorEventDefinition, definition);
@@ -3957,7 +4034,7 @@ public class BpmnParse extends Parse {
     ParameterValueProvider tenantIdValueProvider = null;
 
     String tenantId = callingActivityElement.attributeNS(OPERATON_BPMN_EXTENSIONS_NS, attrName);
-    if (tenantId != null && tenantId.length() > 0) {
+    if (tenantId != null && !tenantId.isEmpty()) {
       tenantIdValueProvider = createParameterValueProvider(tenantId, expressionManager);
     }
 
@@ -3995,7 +4072,7 @@ public class BpmnParse extends Parse {
   }
 
   protected void parseInputParameter(Element elementWithParameters, CallableElement callableElement) {
-    Element extensionsElement = elementWithParameters.element("extensionElements");
+    Element extensionsElement = elementWithParameters.element(EXTENSION_ELEMENTS_TAG);
 
     if (extensionsElement != null) {
       // input data elements
@@ -4022,7 +4099,7 @@ public class BpmnParse extends Parse {
   }
 
   protected void parseOutputParameter(Element callActivityElement, ActivityImpl activity, CallableElement callableElement) {
-    Element extensionsElement = callActivityElement.element("extensionElements");
+    Element extensionsElement = callActivityElement.element(EXTENSION_ELEMENTS_TAG);
 
     if (extensionsElement != null) {
       // output data elements
@@ -4223,8 +4300,8 @@ public class BpmnParse extends Parse {
     for (Element sequenceFlowElement : processElement.elements("sequenceFlow")) {
 
       String id = sequenceFlowElement.attribute("id");
-      String sourceRef = sequenceFlowElement.attribute("sourceRef");
-      String destinationRef = sequenceFlowElement.attribute("targetRef");
+      String sourceRef = sequenceFlowElement.attribute(SOURCE_REF_ATTRIBUTE);
+      String destinationRef = sequenceFlowElement.attribute(TARGET_REF_ATTRIBUTE);
 
       // check if destination is a throwing link event (event source) which mean
       // we have
@@ -4292,7 +4369,7 @@ public class BpmnParse extends Parse {
         TransitionImpl transition = sourceActivity.createOutgoingTransition(id);
         sequenceFlows.put(id, transition);
         transition.setProperty("name", sequenceFlowElement.attribute("name"));
-        transition.setProperty("documentation", parseDocumentation(sequenceFlowElement));
+        transition.setProperty(PROPERTYNAME_DOCUMENTATION, parseDocumentation(sequenceFlowElement));
         transition.setDestination(destinationActivity);
         parseSequenceFlowConditionExpression(sequenceFlowElement, transition);
         parseExecutionListenersOnTransition(sequenceFlowElement, transition);
@@ -4356,7 +4433,7 @@ public class BpmnParse extends Parse {
    *          the scope to add the executionListeners to.
    */
   public void parseExecutionListenersOnScope(Element scopeElement, ScopeImpl scope) {
-    Element extentionsElement = scopeElement.element("extensionElements");
+    Element extentionsElement = scopeElement.element(EXTENSION_ELEMENTS_TAG);
     String scopeElementId = scopeElement.attribute("id");
     if (extentionsElement != null) {
       List<Element> listenerElements = extentionsElement.elementsNS(OPERATON_BPMN_EXTENSIONS_NS, "executionListener");
@@ -4365,7 +4442,7 @@ public class BpmnParse extends Parse {
         if (isValidEventNameForScope(eventName, listenerElement, scopeElementId)) {
           ExecutionListener listener = parseExecutionListener(listenerElement, scopeElementId);
           if (listener != null) {
-            scope.addExecutionListener(eventName, listener);
+            scope.addListener(eventName, listener);
           }
         }
       }
@@ -4377,7 +4454,7 @@ public class BpmnParse extends Parse {
    * added.
    */
   protected boolean isValidEventNameForScope(String eventName, Element listenerElement, String ancestorElementId) {
-    if (eventName != null && eventName.trim().length() > 0) {
+    if (eventName != null && !eventName.trim().isEmpty()) {
       if ("start".equals(eventName) || "end".equals(eventName)) {
         return true;
       } else {
@@ -4390,7 +4467,7 @@ public class BpmnParse extends Parse {
   }
 
   public void parseExecutionListenersOnTransition(Element activitiElement, TransitionImpl activity) {
-    Element extensionElements = activitiElement.element("extensionElements");
+    Element extensionElements = activitiElement.element(EXTENSION_ELEMENTS_TAG);
     if (extensionElements != null) {
       List<Element> listenerElements = extensionElements.elementsNS(OPERATON_BPMN_EXTENSIONS_NS, "executionListener");
       for (Element listenerElement : listenerElements) {
@@ -4398,7 +4475,7 @@ public class BpmnParse extends Parse {
         if (listener != null) {
           // Since a transition only fires event 'take', we don't parse the
           // event attribute, it is ignored
-          activity.addExecutionListener(listener);
+          activity.addListener(ExecutionListener.EVENTNAME_TAKE, listener);
         }
       }
     }
@@ -4417,7 +4494,7 @@ public class BpmnParse extends Parse {
     String className = executionListenerElement.attribute(PROPERTYNAME_CLASS);
     String expression = executionListenerElement.attribute(PROPERTYNAME_EXPRESSION);
     String delegateExpression = executionListenerElement.attribute(PROPERTYNAME_DELEGATE_EXPRESSION);
-    Element scriptElement = executionListenerElement.elementNS(OPERATON_BPMN_EXTENSIONS_NS, "script");
+    Element scriptElement = executionListenerElement.elementNS(OPERATON_BPMN_EXTENSIONS_NS, SCRIPT_TAG);
 
     if (className != null) {
       if (className.isEmpty()) {
@@ -4470,7 +4547,7 @@ public class BpmnParse extends Parse {
   }
 
   public void parseBPMNPlane(Element bpmnPlaneElement) {
-    String bpmnElement = bpmnPlaneElement.attribute("bpmnElement");
+    String bpmnElement = bpmnPlaneElement.attribute(BPMN_ELEMENT_ATTRIBUTE);
     if (bpmnElement != null && !"".equals(bpmnElement)) {
       // there seems to be only on process without collaboration
       if (getProcessDefinition(bpmnElement) != null) {
@@ -4493,7 +4570,7 @@ public class BpmnParse extends Parse {
   }
 
   public void parseBPMNShape(Element bpmnShapeElement) {
-    String bpmnElement = bpmnShapeElement.attribute("bpmnElement");
+    String bpmnElement = bpmnShapeElement.attribute(BPMN_ELEMENT_ATTRIBUTE);
 
     if (bpmnElement != null && !"".equals(bpmnElement)) {
       // For collaborations, their are also shape definitions for the
@@ -4551,7 +4628,7 @@ public class BpmnParse extends Parse {
   }
 
   public void parseBPMNEdge(Element bpmnEdgeElement) {
-    String sequenceFlowId = bpmnEdgeElement.attribute("bpmnElement");
+    String sequenceFlowId = bpmnEdgeElement.attribute(BPMN_ELEMENT_ATTRIBUTE);
     if (sequenceFlowId != null && !"".equals(sequenceFlowId)) {
       if (sequenceFlows != null && sequenceFlows.containsKey(sequenceFlowId)) {
 
@@ -4649,7 +4726,7 @@ public class BpmnParse extends Parse {
     if (TRUE.equals(booleanText) || "enabled".equals(booleanText) || "on".equals(booleanText) || "active".equals(booleanText) || "yes".equals(booleanText)) {
       return Boolean.TRUE;
     }
-    if ("false".equals(booleanText) || "disabled".equals(booleanText) || "off".equals(booleanText) || "inactive".equals(booleanText)
+    if (FALSE.equals(booleanText) || "disabled".equals(booleanText) || "off".equals(booleanText) || "inactive".equals(booleanText)
         || "no".equals(booleanText)) {
       return Boolean.FALSE;
     }
@@ -4697,7 +4774,7 @@ public class BpmnParse extends Parse {
   }
 
   protected boolean hasConnector(Element element) {
-    Element extensionElements = element.element("extensionElements");
+    Element extensionElements = element.element(EXTENSION_ELEMENTS_TAG);
     return extensionElements != null && extensionElements.element("connector") != null;
   }
 
@@ -4712,7 +4789,7 @@ public class BpmnParse extends Parse {
   // IoMappings ////////////////////////////////////////////////////////
 
   protected void parseActivityInputOutput(Element activityElement, ActivityImpl activity) {
-    Element extensionElements = activityElement.element("extensionElements");
+    Element extensionElements = activityElement.element(EXTENSION_ELEMENTS_TAG);
     if (extensionElements != null) {
       IoMapping inputOutput = null;
       try {
@@ -4753,14 +4830,14 @@ public class BpmnParse extends Parse {
 
     if (!(tagName.toLowerCase().contains("task")
         || tagName.contains("Event")
-        || tagName.equals("transaction")
-        || tagName.equals("subProcess")
+        || tagName.equals(TRANSACTION_TAG)
+        || tagName.equals(SUB_PROCESS_TAG)
         || tagName.equals("callActivity"))) {
       addError("operaton:inputOutput mapping unsupported for element type '" + tagName + "'.", activityElement);
       return false;
     }
 
-    if (tagName.equals("subProcess") && TRUE.equals(activityElement.attribute("triggeredByEvent"))) {
+    if (tagName.equals(SUB_PROCESS_TAG) && TRUE.equals(activityElement.attribute("triggeredByEvent"))) {
       addError("operaton:inputOutput mapping unsupported for element type '" + tagName + "' with attribute 'triggeredByEvent = true'.", activityElement);
       return false;
     }
