@@ -16,8 +16,7 @@
  */
 package org.operaton.bpm.engine.test.api.task;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.*;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
@@ -57,8 +56,6 @@ import org.operaton.bpm.engine.identity.Group;
 import org.operaton.bpm.engine.identity.User;
 import org.operaton.bpm.engine.impl.TaskServiceImpl;
 import org.operaton.bpm.engine.impl.cfg.ProcessEngineConfigurationImpl;
-import org.operaton.bpm.engine.impl.interceptor.Command;
-import org.operaton.bpm.engine.impl.interceptor.CommandContext;
 import org.operaton.bpm.engine.impl.persistence.entity.HistoricDetailVariableInstanceUpdateEntity;
 import org.operaton.bpm.engine.impl.persistence.entity.VariableInstanceEntity;
 import org.operaton.bpm.engine.impl.util.ClockUtil;
@@ -259,7 +256,9 @@ public class TaskServiceTest {
     try {
       taskService.saveTask(task);
       fail("It should not be possible to save a task with a non existing parent task.");
-    } catch (NotValidException e) {}
+    } catch (NotValidException e) {
+      // expected
+    }
   }
 
   @Test
@@ -309,7 +308,8 @@ public class TaskServiceTest {
     String taskId = task.getId();
 
     // Deleting non-existing comment should be silently ignored
-    taskService.deleteTaskComment(taskId, "notExistingCommentId");
+    assertThatCode(() -> taskService.deleteTaskComment(taskId, "notExistingCommentId"))
+      .doesNotThrowAnyException();
 
     // Finally, delete task
     taskService.deleteTask(taskId, true);
@@ -381,8 +381,9 @@ public class TaskServiceTest {
     taskService.saveTask(task);
     String taskId = task.getId();
 
-    // Deleting comments of a task that doesnt have any comments should silently ignored
-    taskService.deleteTaskComments(taskId);
+    // Deleting comments of a task that doesn't have any comments should be silently ignored
+    assertThatCode(() -> taskService.deleteTaskComments(taskId))
+      .doesNotThrowAnyException();
 
     // Finally, delete task
     taskService.deleteTask(taskId, true);
@@ -448,9 +449,10 @@ public class TaskServiceTest {
     taskService.saveTask(task);
     String taskId = task.getId();
     Comment comment = taskService.createComment(taskId, null, "originalMessage");
+    var commentId = comment.getId();
 
     try {
-      taskService.updateTaskComment(null, comment.getId(), "updatedMessage");
+      taskService.updateTaskComment(null, commentId, "updatedMessage");
       fail("BadUserRequestException expected");
     } catch (BadUserRequestException ae) {
       testRule.assertTextPresent("Both process instance and task ids are null", ae.getMessage());
@@ -465,9 +467,10 @@ public class TaskServiceTest {
     taskService.saveTask(task);
     String taskId = task.getId();
     Comment comment = taskService.createComment(taskId, null, "originalMessage");
+    var commentId = comment.getId();
 
     try {
-      taskService.updateTaskComment(taskId, comment.getId(), null);
+      taskService.updateTaskComment(taskId, commentId, null);
       fail("NullValueException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("message is null", ae.getMessage());
@@ -545,9 +548,11 @@ public class TaskServiceTest {
   @Test
   public void testDeleteProcessInstanceCommentNotExistingCommentId() {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
+    String processInstanceId = processInstance.getId();
 
     // Deleting non-existing comment should be silently ignored
-    taskService.deleteProcessInstanceComment(processInstance.getId(), "notExistingCommentId");
+    assertThatCode(() -> taskService.deleteProcessInstanceComment(processInstanceId, "notExistingCommentId"))
+      .doesNotThrowAnyException();
   }
 
   @Deployment(resources = { "org/operaton/bpm/engine/test/api/oneTaskProcess.bpmn20.xml" })
@@ -609,11 +614,12 @@ public class TaskServiceTest {
   @Deployment(resources = { "org/operaton/bpm/engine/test/api/oneTaskProcess.bpmn20.xml" })
   @Test
   public void testDeleteProcessInstanceCommentsNoComments() {
-
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
+    String processInstanceId = processInstance.getId();
 
-    // Deleting comments of a task that doesn't have any comments should silently ignored
-    taskService.deleteProcessInstanceComments(processInstance.getId());
+    // Deleting comments of a task that doesn't have any comments should be silently ignored
+    assertThatCode(() -> taskService.deleteProcessInstanceComments(processInstanceId))
+      .doesNotThrowAnyException();
   }
 
   @Deployment(resources = { "org/operaton/bpm/engine/test/api/oneTaskProcess.bpmn20.xml" })
@@ -658,8 +664,9 @@ public class TaskServiceTest {
   @Test
   public void testUpdateProcessInstanceCommentNullCommentId() {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
+    var processInstanceId = processInstance.getId();
     try {
-      taskService.updateProcessInstanceComment(processInstance.getId(), null, "aMessage");
+      taskService.updateProcessInstanceComment(processInstanceId, null, "aMessage");
       fail("NullValueException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("commentId is null", ae.getMessage());
@@ -672,9 +679,10 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
 
     Comment comment = taskService.createComment(null, processInstance.getId(), "originalMessage");
+    var commentId = comment.getId();
 
     try {
-      taskService.updateProcessInstanceComment(null, comment.getId(), "updatedMessage");
+      taskService.updateProcessInstanceComment(null, commentId, "updatedMessage");
       fail("BadUserRequestException expected");
     } catch (BadUserRequestException ae) {
       testRule.assertTextPresent("Both process instance and task ids are null", ae.getMessage());
@@ -688,9 +696,10 @@ public class TaskServiceTest {
     String processInstanceId = processInstance.getId();
 
     Comment comment = taskService.createComment(null, processInstanceId, "originalMessage");
+    var commentId = comment.getId();
 
     try {
-      taskService.updateProcessInstanceComment(processInstanceId, comment.getId(), null);
+      taskService.updateProcessInstanceComment(processInstanceId, commentId, null);
       fail("NullValueException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("message is null", ae.getMessage());
@@ -731,7 +740,6 @@ public class TaskServiceTest {
 
     List<Comment> updateCommentLst = taskService.getProcessInstanceComments(processInstanceId);
 
-    assertThat(updateCommentLst).isNotEmpty();
     assertThat(updateCommentLst).hasSize(1);
 
     Comment actual = updateCommentLst.get(0);
@@ -751,7 +759,6 @@ public class TaskServiceTest {
 
     List<Comment> updateCommentLst = taskService.getProcessInstanceComments(processInstanceId);
 
-    assertThat(updateCommentLst).isNotEmpty();
     assertThat(updateCommentLst).hasSize(1);
 
     Comment actual = updateCommentLst.get(0);
@@ -803,11 +810,14 @@ public class TaskServiceTest {
     if (historyLevel> ProcessEngineConfigurationImpl.HISTORYLEVEL_NONE) {
       Task task = taskService.newTask("testId");
       taskService.saveTask(task);
+      var taskId = task.getId();
       try {
-        taskService.createComment(task.getId(), null, null);
+        taskService.createComment(taskId, null, null);
         fail("Expected process engine exception");
       }
-      catch (ProcessEngineException e) {}
+      catch (ProcessEngineException e) {
+        // expected
+      }
       finally {
         taskService.deleteTask(task.getId(), true);
       }
@@ -822,7 +832,9 @@ public class TaskServiceTest {
         taskService.createComment(null, null, "test");
         fail("Expected process engine exception");
       }
-      catch (ProcessEngineException e){}
+      catch (ProcessEngineException e){
+        // expected
+      }
     }
   }
 
@@ -1091,9 +1103,10 @@ public class TaskServiceTest {
   public void testClaimUnexistingTaskId() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.claim("unexistingtaskid", user.getId());
+      taskService.claim("unexistingtaskid", userId);
       fail("ProcessEngineException expected");
     } catch (ProcessEngineException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingtaskid", ae.getMessage());
@@ -1113,9 +1126,11 @@ public class TaskServiceTest {
 
     // Claim task the first time
     taskService.claim(task.getId(), user.getId());
+    var secondUserId = secondUser.getId();
+    var taskId = task.getId();
 
     try {
-      taskService.claim(task.getId(), secondUser.getId());
+      taskService.claim(taskId, secondUserId);
       fail("ProcessEngineException expected");
     } catch (TaskAlreadyClaimedException ae) {
       testRule.assertTextPresent("Task '" + task.getId() + "' is already claimed by someone else.", ae.getMessage());
@@ -1406,13 +1421,9 @@ public class TaskServiceTest {
 
     // when
     final boolean hasLoadedAnyVariables =
-      processEngineConfiguration.getCommandExecutorTxRequired().execute(new Command<Boolean>() {
-
-        @Override
-        public Boolean execute(CommandContext commandContext) {
-          taskService.complete(task.getId());
-          return !commandContext.getDbEntityManager().getCachedEntitiesByType(VariableInstanceEntity.class).isEmpty();
-        }
+      processEngineConfiguration.getCommandExecutorTxRequired().execute(commandContext -> {
+        taskService.complete(task.getId());
+        return !commandContext.getDbEntityManager().getCachedEntitiesByType(VariableInstanceEntity.class).isEmpty();
       });
 
     // then
@@ -1647,9 +1658,10 @@ public class TaskServiceTest {
   public void testSetAssigneeUnexistingTask() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.setAssignee("unexistingTaskId", user.getId());
+      taskService.setAssignee("unexistingTaskId", userId);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -1672,9 +1684,10 @@ public class TaskServiceTest {
   public void testSetOwnerUnexistingTask() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.setOwner("unexistingTaskId", user.getId());
+      taskService.setOwner("unexistingTaskId", userId);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -1687,9 +1700,10 @@ public class TaskServiceTest {
   public void testSetOwnerNullUser() {
     Task task = taskService.newTask();
     taskService.saveTask(task);
+    var taskId = task.getId();
 
     try {
-      taskService.setOwner(task.getId(), null);
+      taskService.setOwner(taskId, null);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("userId and groupId cannot both be null", ae.getMessage());
@@ -1740,9 +1754,10 @@ public class TaskServiceTest {
   public void testAddCandidateUserUnexistingTask() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.addCandidateUser("unexistingTaskId", user.getId());
+      taskService.addCandidateUser("unexistingTaskId", userId);
       fail("ProcessEngineException expected");
     } catch (ProcessEngineException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -1775,8 +1790,9 @@ public class TaskServiceTest {
   public void testAddCandidateGroupUnexistingTask() {
     Group group = identityService.newGroup("group");
     identityService.saveGroup(group);
+    var groupId = group.getId();
     try {
-      taskService.addCandidateGroup("unexistingTaskId", group.getId());
+      taskService.addCandidateGroup("unexistingTaskId", groupId);
       fail("ProcessEngineException expected");
     } catch (ProcessEngineException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -1808,9 +1824,10 @@ public class TaskServiceTest {
   public void testAddGroupIdentityLinkUnexistingTask() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.addGroupIdentityLink("unexistingTaskId", user.getId(), IdentityLinkType.CANDIDATE);
+      taskService.addGroupIdentityLink("unexistingTaskId", userId, IdentityLinkType.CANDIDATE);
       fail("ProcessEngineException expected");
     } catch (ProcessEngineException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -1843,9 +1860,10 @@ public class TaskServiceTest {
   public void testAddUserIdentityLinkUnexistingTask() {
     User user = identityService.newUser("user");
     identityService.saveUser(user);
+    var userId = user.getId();
 
     try {
-      taskService.addUserIdentityLink("unexistingTaskId", user.getId(), IdentityLinkType.CANDIDATE);
+      taskService.addUserIdentityLink("unexistingTaskId", userId, IdentityLinkType.CANDIDATE);
       fail("ProcessEngineException expected");
     } catch (ProcessEngineException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingTaskId", ae.getMessage());
@@ -2045,9 +2063,10 @@ public class TaskServiceTest {
   public void testSetNameNullTaskName() {
     Task task = taskService.newTask();
     taskService.saveTask(task);
+    var taskId = task.getId();
 
     try {
-      taskService.setName(task.getId(), null);
+      taskService.setName(taskId, null);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("value is null", ae.getMessage());
@@ -2095,8 +2114,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetDueDateUnexistingTaskId() {
+    Date dueDate = new Date();
     try {
-      taskService.setDueDate("unexistingtask", new Date());
+      taskService.setDueDate("unexistingtask", dueDate);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingtask", ae.getMessage());
@@ -2105,8 +2125,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetDueDateNullTaskId() {
+    Date dueDate = new Date();
     try {
-      taskService.setDueDate(null, new Date());
+      taskService.setDueDate(null, dueDate);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("taskId is null", ae.getMessage());
@@ -2132,8 +2153,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetFollowUpDateUnexistingTaskId() {
+    Date followUpDate = new Date();
     try {
-      taskService.setFollowUpDate("unexistingtask", new Date());
+      taskService.setFollowUpDate("unexistingtask", followUpDate);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingtask", ae.getMessage());
@@ -2142,8 +2164,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetFollowUpDateNullTaskId() {
+    Date followUpDate = new Date();
     try {
-      taskService.setFollowUpDate(null, new Date());
+      taskService.setFollowUpDate(null, followUpDate);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("taskId is null", ae.getMessage());
@@ -2168,7 +2191,7 @@ public class TaskServiceTest {
   }
 
   /**
-   * @see http://jira.codehaus.org/browse/ACT-1059
+   * @see <a href="http://jira.codehaus.org/browse/ACT-1059">ACT-1059</a>
    */
   @Test
   public void testSetDelegationState() {
@@ -2203,13 +2226,11 @@ public class TaskServiceTest {
         assertTrue(currentHistoricDetail instanceof HistoricDetailVariableInstanceUpdateEntity);
         HistoricDetailVariableInstanceUpdateEntity historicVariableUpdate = (HistoricDetailVariableInstanceUpdateEntity) currentHistoricDetail;
 
-        if (historicVariableUpdate.getName().equals(variableName)) {
-          if (historicVariableUpdate.getValue() == null) {
-            if (deletedVariableUpdateFound) {
-              fail("Mismatch: A HistoricVariableUpdateEntity with a null value already found");
-            } else {
-              deletedVariableUpdateFound = true;
-            }
+        if (historicVariableUpdate.getName().equals(variableName) && historicVariableUpdate.getValue() == null) {
+          if (deletedVariableUpdateFound) {
+            fail("Mismatch: A HistoricVariableUpdateEntity with a null value already found");
+          } else {
+            deletedVariableUpdateFound = true;
           }
         }
       }
@@ -2379,9 +2400,9 @@ public class TaskServiceTest {
 
     task1.setDescription("test description one");
     taskService.saveTask(task1);
+    task2.setDescription("test description two");
 
     try {
-      task2.setDescription("test description two");
       taskService.saveTask(task2);
 
       fail("Expecting exception");
@@ -2421,39 +2442,41 @@ public class TaskServiceTest {
     runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().singleResult();
     assertNotNull(task);
+    String taskId = task.getId();
+    List<String> taskIds = List.of(taskId);
 
     try {
-      taskService.deleteTask(task.getId());
+      taskService.deleteTask(taskId);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), true);
+      taskService.deleteTask(taskId, true);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), "test");
+      taskService.deleteTask(taskId, "test");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()));
+      taskService.deleteTasks(Collections.singletonList(taskId));
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), true);
+      taskService.deleteTasks(taskIds, true);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), "test");
+      taskService.deleteTasks(taskIds, "test");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
@@ -2481,44 +2504,46 @@ public class TaskServiceTest {
 
     Task task = taskService.createTaskQuery().singleResult();
     assertNotNull(task);
+    String taskId = task.getId();
+    var taskIds = Collections.singletonList(task.getId());
 
     try {
-      taskService.deleteTask(task.getId());
+      taskService.deleteTask(taskId);
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), true);
+      taskService.deleteTask(taskId, true);
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), "test");
+      taskService.deleteTask(taskId, "test");
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()));
+      taskService.deleteTasks(taskIds);
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), true);
+      taskService.deleteTasks(taskIds, true);
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), "test");
+      taskService.deleteTasks(taskIds, "test");
       fail("Should not be possible to delete task");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running case instance", ae.getMessage());
@@ -2637,10 +2662,13 @@ public class TaskServiceTest {
   @RequiredHistoryLevel(ProcessEngineConfiguration.HISTORY_AUDIT)
   @Test
   public void testCreateTaskAttachmentWithNullTaskAndProcessInstance() {
+    var content = new ByteArrayInputStream("someContent".getBytes());
     try {
-      taskService.createAttachment("web page", null, null, "weatherforcast", "temperatures and more", new ByteArrayInputStream("someContent".getBytes()));
+      taskService.createAttachment("web page", null, null, "weatherforcast", "temperatures and more", content);
       fail("expected process engine exception");
-    } catch (ProcessEngineException e) {}
+    } catch (ProcessEngineException e) {
+      // expected
+    }
   }
 
   @Deployment(resources={
@@ -2667,7 +2695,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteAttachment(null);
         fail("expected process engine exception");
-      } catch (ProcessEngineException e) {}
+      } catch (ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2697,7 +2727,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteTaskAttachment(null, null);
         fail("expected process engine exception");
-      } catch (ProcessEngineException e) {}
+      } catch (ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2708,7 +2740,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteTaskAttachment(null, "myAttachmentId");
         fail("expected process engine exception");
-      } catch(ProcessEngineException e) {}
+      } catch(ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2767,6 +2801,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariablesLocal("nonExistingId", modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2785,6 +2820,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariablesLocal(null, modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2835,6 +2871,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariables("nonExistingId", modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2853,6 +2890,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariables(null, modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2906,7 +2944,7 @@ public class TaskServiceTest {
     // this works
     VariableMap variablesTyped = taskService.getVariablesTyped(taskId, false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
-    variablesTyped = taskService.getVariablesTyped(taskId, Arrays.asList("broken"), false);
+    variablesTyped = taskService.getVariablesTyped(taskId, List.of("broken"), false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
 
     // this does not
@@ -2918,7 +2956,7 @@ public class TaskServiceTest {
 
     // this does not
     try {
-      taskService.getVariablesTyped(taskId, Arrays.asList("broken"), true);
+      taskService.getVariablesTyped(taskId, List.of("broken"), true);
     } catch(ProcessEngineException e) {
       testRule.assertTextPresent("Cannot deserialize object", e.getMessage());
     }
@@ -2955,7 +2993,7 @@ public class TaskServiceTest {
     // this works
     VariableMap variablesTyped = taskService.getVariablesLocalTyped(taskId, false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
-    variablesTyped = taskService.getVariablesLocalTyped(taskId, Arrays.asList("broken"), false);
+    variablesTyped = taskService.getVariablesLocalTyped(taskId, List.of("broken"), false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
 
     // this does not
@@ -2967,7 +3005,7 @@ public class TaskServiceTest {
 
     // this does not
     try {
-      taskService.getVariablesLocalTyped(taskId, Arrays.asList("broken"), true);
+      taskService.getVariablesLocalTyped(taskId, List.of("broken"), true);
     } catch(ProcessEngineException e) {
       testRule.assertTextPresent("Cannot deserialize object", e.getMessage());
     }
@@ -2997,8 +3035,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -3027,8 +3065,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableAnotherValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableAnotherValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/twoTasksProcess.bpmn20.xml"})
@@ -3051,8 +3089,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableAnotherValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableAnotherValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -3217,9 +3255,10 @@ public class TaskServiceTest {
     // given
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleBpmnError(task.getId(), ""))
+    assertThatThrownBy(() -> taskService.handleBpmnError(taskId, ""))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("errorCode is empty");
   }
@@ -3230,9 +3269,10 @@ public class TaskServiceTest {
     // given
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleBpmnError(task.getId(), null))
+    assertThatThrownBy(() -> taskService.handleBpmnError(taskId, null))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("errorCode is null");
   }
@@ -3330,13 +3370,14 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(PROCESS_KEY);
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
     assertEquals(USER_TASK_THROW_ESCALATION, task.getTaskDefinitionKey());
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), ""))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, ""))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("escalationCode is empty");
 
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), null))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, null))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("escalationCode is null");
   }
@@ -3355,9 +3396,10 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(PROCESS_KEY);
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
     assertEquals(USER_TASK_THROW_ESCALATION, task.getTaskDefinitionKey());
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), ESCALATION_CODE))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, ESCALATION_CODE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Execution with id '" + task.getTaskDefinitionKey()
       + "' throws an escalation event with escalationCode '" + ESCALATION_CODE
